fixed 500 response server internal error and regenerated swagger
